--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<meta charset="UTF-8">
 			<title>Modern Periodic Table</title>
-			<link rel="stylesheet" href="css/normalize.css">
-			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="normalize.css">
+			<link rel="stylesheet" href="main.css">
 		</head>
 		<body>
 			<div id="grid" class="grid-wrapper">
