--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<meta charset="UTF-8">
 			<title>Modern Periodic Table</title>
 			<link rel="stylesheet" href="css/normalize.css">
-			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="main.css">
 			<script src="https://kit.fontawesome.com/cf815ba802.js"></script>
 			<script type="text/javascript" src="script.js"></script>
 		</head>
