--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<meta charset="UTF-8">
 			<title>Modern Periodic Table</title>
-			<link rel="stylesheet" href="css/normalize.css">
+			<link rel="stylesheet" href="normalize.css">
 			<link rel="stylesheet" href="main.css">
 			<script src="https://kit.fontawesome.com/cf815ba802.js"></script>
 			<script type="text/javascript" src="script.js"></script>
